Fri Mar 13 11:23:55 PST 1998 Shawn T. Amundson <amundson@gimp.org>

	* docs/gtk_tut.sgml:
	* docs/gtk_tut_it.sgml:
	* docs/gtk_tut_packbox1.gif:
        * docs/gtk_tut_packbox2.gif:
        * docs/gtk_tut_table.gif: added graphics, update tutorials
          appropriately

Fri Mar 13 18:25:07 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkcombo.c: fix popup calculations (removal
	of FIXMEs), changes from Lars Hamann.

Fri Mar 13 10:25:16 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkwidget.h: 
	* gtk/gtkwidget.c: renamed gtk_widget_delete_hides to
 	gtk_widget_hide_on_delete at owens request, and because the
	new name is much more descriptive.

Fri Mar 13 17:33:56 GMT 1998 Tony Gale <gale@gimp.org>

	docs/gtkfaq.sgml: fix the spelling of Helge Hess's name

Fri Mar 13 09:40:17 GMT 199 Tony Gale  <gale@gimp.org>

	* docs/gtkfaq.sgml: update links to documentation and
	  remove question on what needs to be done before 1.0

Fri Mar 13 01:17:44 1998  George Lebl  <jirka@5z.com>

	* gtk/gtkfilesel.c: Set the column width of the clists
	  to the longest string length so that the bottom scrollbar
	  appears when you get some long files in the list

1998-03-12  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* docs/gtk_tut.sgml: fix one missing quote.

Thu Mar 12 18:01:03 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk.m4 gtk-config.in Makefile.am configure.in: 
	  Added a new mechanism for GTK-dependent programs to
	  find out about the installed GTK. (Does not remove
	  any current functionality)

	* gtk+-xconfig.in: Was no longer used for anything.

Thu Mar 12 20:17:47 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkhandlebox.c (gtk_handle_box_delete_float): return TRUE for
	GtkWidget::delete_event to avoid destruction of our float window.

	* gtk/gtkmain.c (gtk_main_iteration_do): GDK_DELETE will destroy a
	widget if the last handler returned FALSE or there was none connected.

	* gtk/testgtk.c: adapted all delete_event/destroy case that were affected.
